# c_plus_learn

./: README.md
c_plus_learn/: client  client.cpp  makefile  server  server.cpp
some_finished/Dlog/: CMakeLists.txt
some_finished/Dlog/src/: dlogger.cpp  dlogger.h  liblog.sh  main.cpp
some_finished/c_plus_del_file_line/: CMakeLists.txt  cut_file_line.cpp  example.txt
some_finished/cv_gst/: cap_gst.cpp  cv.cpp  cv_cap_gst.cpp  cv_gst.cpp  gst.sh  gstreamer_cv.cpp
some_finished/ros1/publisher/src/pcd_publisher/: CMakeLists.txt  package.xml
some_finished/ros1/publisher/src/pcd_publisher/include/: pointT.h
some_finished/ros1/publisher/src/pcd_publisher/src/: pcd_publisher.cpp  pcd_publisher.cpp.origin
some_finished/ros2/publisher/src/publisher/: CMakeLists.txt  package.xml
some_finished/ros2/publisher/src/publisher/src/: main.cpp
