<?xml version="1.0"?>
<package format="3">
  <name>publisher</name>
  <version>0.1.0</version>
  <description>My ROS 2 Humble Package</description>

  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>qt5_cmake_module</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_common</depend>
  <depend>pcl_io</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

